added dependencies to package.json file

--- a/Develop/package.json
+++ b/Develop/package.json
@@ -12,6 +12,10 @@
   },
   "author": "Valeria Lopez",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
+  },
   "bugs": {
     "url": "https://github.com/valopezs/note-taker/issues"
   },
